--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <h2><input type="checkbox" id="task9"> Eat Lunch</h2>
   <h2><input type="checkbox" id="task7"> 5 Hour Work Day at Apple</h2>
   <h2><input type="checkbox" id="task10"> Eat Dinner</h2>
+  <h2><input type="checkbox" id="task6"> Finish MKG540 Module 8 Portfolio Project</h2>
   <h2><input type="checkbox" id="task10"> Family Time</h2>
   <h2><input type="checkbox" id="task11"> 15 Minute House Clean Up</h2>
   <h2><input type="checkbox" id="task12"> Learn Spanish</h2>
