--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
   <h2><input type="checkbox" id="task13"> Review Email Accounts</h2>
   <h2><input type="checkbox" id="task13"> Review Social Media</h2>
   <h2><input type="checkbox" id="task14"> Strength Train</h2>
+  <h2><input type="checkbox" id="task14"> Make Gold Soap</h2>
   <h2><input type="checkbox" id="task15"> Shower</h2>
   <h2><input type="checkbox" id="task16"> Stretch</h2>
   <h2><input type="checkbox" id="task17"> Read a Chapter of a Book</h2>
