--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
   <h2><input type="checkbox" id="task12"> Learn Spanish</h2>
   <h2><input type="checkbox" id="task13"> Review Email Accounts</h2>
   <h2><input type="checkbox" id="task13"> Review Social Media</h2>
+  <h2><input type="checkbox" id="task13"> Find Treadmill Remote</h2>
   <h2><input type="checkbox" id="task14"> Strength Train</h2>
   <h2><input type="checkbox" id="task14"> Make Gold Soap</h2>
   <h2><input type="checkbox" id="task15"> Shower</h2>
