--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <h2><input type="checkbox" id="task1"> Dream Journal</h2>
   <h2><input type="checkbox" id="task2"> Brush Teeth</h2>
   <h2><input type="checkbox" id="task3"> Take Medication</h2>
+  <h2><input type="checkbox" id="task4"> Take Out Trash</h2>
   <h2><input type="checkbox" id="task4"> Shower</h2>
   <h2><input type="checkbox" id="task5"> 10 Minute Stretch</h2>
   <h2><input type="checkbox" id="task6"> Eat Breakfast</h2>
@@ -63,6 +64,7 @@
   <h2><input type="checkbox" id="task13"> Review Email Accounts</h2>
   <h2><input type="checkbox" id="task13"> Review Social Media</h2>
   <h2><input type="checkbox" id="task13"> Find Treadmill Remote</h2>
+  <h2><input type="checkbox" id="task4"> Find Lenovo Charger</h2>
   <h2><input type="checkbox" id="task14"> Strength Train</h2>
   <h2><input type="checkbox" id="task14"> Make Gold Soap</h2>
   <h2><input type="checkbox" id="task15"> Shower</h2>
